# EchoNotes

./: .env.example  .gitignore  EchoNotes_Design_Plan.md  Makefile  README.md  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/actions/run-checks/: action.yaml
.github/workflows/: pr.yaml
apps/api/: Dockerfile  eslint.config.js  package.json  vitest.config.ts
apps/api/prisma/: schema.prisma
apps/api/src/: server.ts
apps/api/src/__tests__/: audioValidation.test.ts  auth.test.ts  blog.test.ts  orchestrator.test.ts  wsRegistry.test.ts
apps/api/src/routes/: auth.ts  blog.ts  profile.ts  sheets.ts  ws.ts
apps/api/src/services/: demoSimulator.ts  orchestrator.ts  wsRegistry.ts
apps/api/src/utils/: audioValidation.ts  frontmatter.ts
apps/web/: eslint.config.js  index.html  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.vue  index.css  main.ts
apps/web/src/__tests__/: SheetCard.test.ts  StatusBadge.test.ts  auth.store.test.ts  (+1 more)
content/blog/: 2026-05-echonotes-launch.md
docs/: EchoNotes_Design_Plan.md
infra/: .env.example  docker-compose.yml
infra/scripts/: cleanup.sh  healthcheck.sh  migrate.sh  reset-db.sh  seed.ts  setup-env.mjs
ml/transcriber/: .dockerignore  Dockerfile  pyproject.toml
ml/transcriber/eval/: eval.py
ml/transcriber/tests/: conftest.py  test_pipeline.py
ml/transcriber/transcriber/: app.py  models.py
ml/transcriber/transcriber/pipeline/: notate.py  quantize.py  render.py  transcribe.py
services/ai-orchestrator/: Dockerfile  go.mod  go.sum  sqlc.yaml
(+37 files in other folders)
