[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echonotes-transcriber"
version = "0.1.0"
description = "EchoNotes ML transcription service — audio to sheet music"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.8.0",

    # ML / audio
    "basic-pitch>=0.3.5",        # Spotify pitch transcription (loads TF internally)
    "librosa>=0.10.2",            # Beat tracking + tempo estimation
    "pretty_midi>=0.2.10",        # MIDI manipulation between pipeline stages

    # Notation
    "music21>=9.3.0",             # Quantized MIDI → MusicXML

    # Rendering
    "verovio>=3.15.0",            # MusicXML → SVG (server-side score rendering)
    "cairosvg>=2.7.1",            # SVG → PDF fallback (requires libcairo2 system lib)

    # Utilities
    "numpy>=1.26.0",
    "structlog>=24.4.0",
    "soundfile>=0.12.1",          # Reliable WAV/FLAC I/O for librosa
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",              # FastAPI test client
]
eval = [
    "mir_eval>=0.7.0",            # Note-level F1 computation (thesis metrics)
    "pandas>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["transcriber"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths  = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
